objects/TASKRAY__trTaskGroup__c.object
<CustomObject>
    <description>This is a TaskRay object that is used to group and organize tasks within projects.</description>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Task Groups</relationshipLabel>
        <relationshipName>TaskRay_Task_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Task Groups</relationshipLabel>
        <relationshipName>trTaskGroupAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBillableHours__c</fullName>
        <label>Actual Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the task group is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the task group was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the task group. Calculated as the difference between the task group Start Date and the task group Actual Completion Date.</description>
        <formula>IF( 
(TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that it took to complete the task group.</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCloneOperationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Task Group has been successfully cloned from a template.  This field is automatically set to true when the clone operation is complete.</description>
        <inlineHelpText>Indicates a Task Group has been successfully cloned from a template.  This field is automatically set to true when the clone operation is complete.</inlineHelpText>
        <label>Clone Operation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a task group is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the task group.</description>
        <inlineHelpText>Indicates whether a task group is complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEndDate__c</fullName>
        <description>Used to track the date of when the task group is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedBillableHours__c</fullName>
        <label>Estimated Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedDuration__c</fullName>
        <description>Used to track the estimated number of days that it should take to complete the task group as scheduled. Calculated as the difference between the task group Start Date and the task group Estimated End Date.</description>
        <formula>IF( 
(TASKRAY__trEndDate__c-TASKRAY__trStartDate__c+ 1) &gt; 0, 
TASKRAY__trEndDate__c-TASKRAY__trStartDate__c+ 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated number of days that it should take to complete the task group as scheduled.</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedCompletionDate__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the date of when the task group is initially projected to be completed. This date will update accordingly to accommodate any scheduling changes up until the task group Start Date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the date of when the task group was initially projected to be completed.</inlineHelpText>
        <label>Initial Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the number of days between the task group Start Date and the task group Initial Projected Completion Date.</description>
        <formula>IF( 
(TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Behind the scenes” field. This is the duration of the task group as it was initially projected.</inlineHelpText>
        <label>Initial Projected Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Task Groups</relationshipLabel>
        <relationshipName>trTaskGroupOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <description>Used to track the date of when the task group is scheduled to start.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
        <relationshipLabel>Cloned Task Groups</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplate__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__trTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Task Group</label>
    <listViews>
        <fullName>TASKRAY__allTaskGroups</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>TASKRAY__trStartDate__c</columns>
        <columns>TASKRAY__trEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Task Groups</label>
    </listViews>
    <nameField>
        <label>Task Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>